test/runtime/fail/expr/index_non_local_compile.hy

// expect error: Attempt to index non-local

let b = (nil).hello
